styles.css
@font-face {
  font-family: 'neontubes';
  src: url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.eot");
  src: url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.eot?#iefix") format("embedded-opentype"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.woff2") format("woff2"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.woff") format("woff"), url("https://bitbucket.org/kennethjensen/webfonts/raw/fc13c1cb430a0e9462da56fe3f421ff7af72db71/neontubes/neontubes-webfont.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}


:root[data-theme="0"] {
--text: #191e01;
--background: #fafee6;
--primary-button: #04839f;
--secondary-button: #f3fdc3;
--accent: #9f0483;
--text2nd: #191e0180;
} 

:root[data-theme="1"] {
--text: #0c0703;
--background: #fcf7f3;
--primary-button: #4c9bd6;
--secondary-button: #ffffff;
--accent: #23669a; 
--text2nd:#0c070380;
}

:root[data-theme="2"] {
--text: #0a030c;
--background: #f5e6f9;
--primary-button: #df72c0;
--secondary-button: #fdf7f8;
--accent: #bf2b4b;  
--text2nd:#0a030c80;
}

:root[data-theme="3"] {
--text: #021d12;
--background: #d9fcee;
--primary-button: #0a808a;
--secondary-button: #ecf3fe;
--accent: #0a3f8a; 
--text2nd:#021d1280;
}

:root[data-theme="4"] {

--text: #150505;
--background: #faeaeb;
--primary-button: #a86429;
--secondary-button: #f4f3d2;
--accent: #a8a429;
--text2nd:#15050580;
 
}



*{
  box-sizing: border-box;


}

body {
  height: 100dvh;
  height: 100vh;
  display: grid;
  grid-template-rows: 
                    auto
                    1fr
                    auto;

  font-family: Arial, sans-serif;
  color: #333;
  margin: 0;
  padding: 0;
  background-color: var(--background );
  
}

.hero{
  height: 90vh;
  /* max-width: 75%; */
  margin: 0 auto;
  font-family:Georgia, 'Times New Roman', Times, serif;
  display: flex;
  flex-direction: column;
  text-align: center;
  /* margin-bottom: 7rem; */
  margin-top: 3rem;
  font-size: 1.5rem;
  position: relative;

  background: linear-gradient(
    to right, 
    var(--text), var(--accent), var(--primary-button)

  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  @media (max-width: 800px) {
 
    max-width: 99%;
  }
}

.hero h1:nth-child(1){
  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
  font-family:Georgia, 'Times New Roman', Times, serif
}

.headerContainer{
  width: 100%;
  position: sticky;
  top: 0;

  z-index: 1000;

  display: flex;
  justify-content:center;
  align-items: center;
  background-color:var(--background) ;
  

  padding: .5rem;
  @media (max-width: 800px) {
 
      flex-wrap: wrap;
      align-items: center;
      justify-content:space-evenly;
      padding: .25;
    } 
}

.header{
 width: clamp(min(65%), 1070px, max(99%));
  min-width: 75%;
  display: flex;
  justify-content:space-evenly;
  align-items: center;
  background-color:var(--background) ;
  

  margin: .5rem;
  @media (max-width: 800px) {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content:space-evenly;
      margin: 0;
    } 

}

#logo {
  margin-right: auto ;
  width: 6rem;
}

.nav ul {
  list-style: none;
  display: flex;
  gap: 1rem;
  /* width:fit-content; */
  @media (max-width: 800px) {
    /* Styles to apply when the screen width is 800px or less */
   
      gap: .5rem;
      align-items: stretch;
    }

}

.nav ul li{
  background-color: var(--primary-button);
  text-align: center;
  border-radius: 5px;
  text-decoration: none;
  padding: 10px;
  @media (max-width: 800px) {
    padding: 4px;
    margin-top: .5rem;
    }
  
}


.nav ul li a {
  text-decoration: none;
  color: var(--background);
}

#themeButton{
  background-color: var(--secondary-button);
  border: none;
}

#theme{
  background-color: var(--secondary-button);
  border: 1px solid var(--text2nd);
  outline: transparent;
}

.nav{
  margin-left: auto;
  @media (max-width: 800px) {
    margin-right: auto;
  } 
}

.main {
  margin-top: auto;
  margin-bottom: auto;
  display: flex;
  flex-direction: column;
  margin: auto;
  width: 100%;
}

.methodology{

padding: 2rem;
min-height: 20%;
background-color: var(--text2nd);
color: var(--background);
padding-top: 70px;  
margin-top: -70px;

@media (max-width: 800px) {
  padding: .5rem;
  padding-top: 70px;  
  margin-top: -70px;
  }
}

.methodology-text{
  max-width: 65ch;
  margin: 0 auto;
}

.methodology ul {
  list-style-type: disc; /* This will give you a round bullet point. */
  padding-left: 20px; /* This indents your list to make it look more attractive. */
}

.methodology ul li {
  /* padding: 3px 0; This gives a little space between each list item. */
  line-height: 1.6; /* This sets a nice line-height for readability. */
  /* color: #333; This changes the color of the list text. */
  font-size: 1em; /* This changes the size of the list text. */
}

.quote{
  margin-left: auto;
  margin-right: auto;
  margin-top: 2rem;
  width: 75%;
  display: flex;
  justify-content: space-evenly;
  align-items: stretch;
  gap: 10%;
  background-color: grey;
  height: max-content;
  /* margin-bottom: 70px; */
}

.projects{
  
  padding: 2rem;
  min-height: 20%;
  color: var(--text);
  padding-top: 80px;  
  margin-top: -80px;
  @media (max-width: 800px) {
    padding: .5rem;
    padding-top: 80px;  
    margin-top: -80px;
    }
}

.projects h2{
  margin-top: 1rem;
}

.about{
  padding: 2rem;
  min-height: 20%;
  background-color: var(--text2nd);
  color: var(--background);
  padding-top: 70px;  
  margin-top: -70px;
  @media (max-width: 800px) {
    padding: .5rem;
    padding-top: 70px;  
    margin-top: -70px;
    }
  
  

}

.cta {
  /* margin: auto auto auto auto;
  width:fit-content; */
  padding: 10px;
  background-color:var(--accent);
  color: var(--background);
  text-align: center;
  border-radius: 5px;
  text-decoration: none;
 }

 .cta a{
  text-decoration: none;
  color: inherit;
 }



.footer a{
  color: var(--background);
  text-decoration: none;
}


.footer {
  display: flex;
  padding: 20px;
  border-top: 1px solid #ddd;
  background-color: var(--text2nd);
  text-decoration: none;
  color: var(--background);
  justify-content: center;
}



#slider {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 10px;
}

#slider:last-child {
  margin-bottom: 50px;
}

.projects h2 {
  color: var(--text2nd);

}

.project-card {
  display: flex;
  flex-direction: column;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  width: 350px;

  
  padding: 1rem;
  margin: 1rem;
  text-align: center;
  font-family: arial;
  margin: 1rem;
  background-color: var(--text2nd);
  color: var(--background);
  gap: .5rem;
}

.project-card img {
  width: 100%;
  height: auto;
}

.project-card h2 {
  margin-bottom: .5rem;
  color: var(--background);
  font-size: 1.2em;
}

.project-card p {
  margin-top: auto;
  margin-bottom: auto;
  font-size: 0.9em;
  color: var(--background);
}

.project-card a {
  margin-top: auto;
  color: var(--background);
  background-color: var(--primary-button);
  border-radius: 5px;
  padding: 4px;
  text-decoration: none;
  transition: background-color 0.3s ease;
}

.project-card a:hover {
  background-color: #1a8cff;
  color: #fff;
}



.about h2{
  margin-top: 1rem;
  margin-bottom: .5rem;

}

.profile {
  max-width: 65ch;
  margin: 0 auto;
  font-family: Arial, sans-serif;
  line-height: 1.6;
  color: var(--background);
}

.profile h1, .profile h2 {
  text-align: center;
  color: var(--background);
}

.profile h1 {
  font-size: 2em;
  margin-bottom: 0.5em;
}

.profile h2 {
  font-size: 1.5em;
  margin-bottom: 1em;
  color: var(--background);
}

.profile p {
  margin-bottom: 1em;
}

.profile ul {
  list-style-type: disc;
  margin-left: 2em;
  margin-bottom: 1em;
}

.profile ul li {
  margin-bottom: 0.5em;
}

.contact-text{
  max-width: 65ch;
  margin: 0 auto;
}


.start {
  margin: 1rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  color: var(--text2nd);
}

.start p{
  color: var(--text);
}


.scroll{
  position: absolute;
  bottom: 100px;
  left: 50%;
  color: var(--accent);
  animation: bounce 2s 3;
}

@keyframes bounce {
  0% { transform: translateY(0); }
  20% { transform: translateY(-20px); }
  40% { transform: translateY(0); }
  60% { transform: translateY(-10px); }
  80% { transform: translateY(0); }
  100% { transform: translateY(0); }
}


.chevron::before {
	border-style: solid;
	border-width: 0.25em 0.25em 0 0;
	content: '';
	display: inline-block;
	height: 0.45em;
	left: 0.15em;
	position: relative;
	top: 0.15em;
	transform: rotate(-45deg);
	vertical-align: top;
	width: 0.45em;
}



.chevron.bottom:before {
	top: 0;
	transform: rotate(135deg);
}



.neonMax {

  transform:translateY(-50%);
  width:100%;
  font-size:1em;
  font-family: "neontubes";
  color: #ffd9e2;
  text-shadow: 0 0 0 transparent, 0 0 10px #ff003c, 0 0 20px rgba(255, 0, 60, 0.5), 0 0 40px #ff003c, 0 0 100px #ff003c, 0 0 200px #ff003c, 0 0 300px #ff003c, 0 0 500px #ff003c, 0 0 1000px #ff003c;
  -webkit-animation: blink 4s infinite alternate;
          animation: blink 4s infinite alternate;
}


::-webkit-scrollbar{
  width: 1rem;
}

::-webkit-scrollbar-track{
  background-color: var(--secondary-button);
  border-radius: 100vh;
  /* margin-block: .5rem; */
}

::-webkit-scrollbar-thumb{
  background-color: var(--text2nd);
  border-radius: 100vh;
}

::-webkit-scrollbar-thumb:hover{
  background-color: var(--text);
}

.heroImage{
  margin-top: 2rem;

  width: 400px; /* Set the desired width for the image container */
  max-width: 100%; /* Ensure the container doesn't exceed its parent's width */
  margin-left: auto;
  margin-right: auto;



}

#heroImage{
  /* display: block; Remove any extra spacing */
  max-width: 100%; /* Make sure the image doesn't exceed its container */
  height: auto; /* Let the height adjust automatically based on the aspect ratio */

}

